色の設定 ヘッダーコピペ

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+@media screen and (max-width: 767px) {
+  .is-pc {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .is-sp {
+    display: none;
+  }
+}
+/*# sourceMappingURL=style.css.map */
