--- a/css/style.scss
+++ b/css/style.scss
@@ -32,3 +32,24 @@ $font-color: #333;
     display: none;
   }
 }
+
+body {
+  font-size: 16px;
+  color: $font-color;
+  font-family:"ヒラギノ明朝 ProN", serif;
+  line-height: 1.6875;
+}
+
+img {
+  width: 100%;
+}
+
+// ---- header ------ //
+.header {
+  background: #ffffff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+}
