--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,14 @@ img {
   width: 100%;
 }
 
+.inner {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 40px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+}
+
 .header {
   background: #ffffff;
   position: fixed;
@@ -29,5 +37,100 @@ img {
   left: 0;
   right: 0;
   z-index: 100;
+}
+
+.header-inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header-logo {
+  width: 120px;
+}
+
+.header-nav {
+  margin-left: auto;
+}
+
+.header-nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header-nav-item + .header-nav-item {
+  margin-left: 46px;
+}
+
+.header-nav-item-link {
+  display: block;
+  color: #333;
+  height: 70px;
+  line-height: 70px;
+  letter-spacing: 0.1em;
+}
+
+main {
+  margin-top: 70px;
+}
+
+footer {
+  background: #f7f7f7;
+  padding: 42px 40px 12px;
+}
+
+.footer-logo {
+  width: 120px;
+  margin: 0 auto;
+}
+
+.footer-nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.footer-nav-item + .footer-nav-item {
+  margin-left: 30px;
+}
+
+.footer-nav-item-link {
+  font-size: 12px;
+  color: #333;
+  display: block;
+  padding: 1em 0;
+}
+
+.footer-sns-list {
+  text-align: center;
+}
+
+.footer-sns-item {
+  display: inline-block;
+}
+
+.footer-sns-item + .footer-sns-item {
+  margin-left: 10px;
+}
+
+.footer-sns-item-link {
+  color: #3EA1D1;
+  font-size: 24px;
+  display: block;
+  padding: 0.1em 0.5em;
+}
+
+.footer-copyright {
+  color: #888888;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 10px;
 }
 /*# sourceMappingURL=style.css.map */
