--- a/css/style.scss
+++ b/css/style.scss
@@ -33,6 +33,7 @@ $font-color: #333;
   }
 }
 
+
 body {
   font-size: 16px;
   color: $font-color;
@@ -44,6 +45,14 @@ img {
   width: 100%;
 }
 
+.inner {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 0 40px;
+  // 現在の状態だとリセットCSSが聞いていて、paddingも含めて1200px実際は1180pxなのでbox-sizingをデフォルト値に戻す
+  box-sizing: content-box;
+}
+
 // ---- header ------ //
 .header {
   background: #ffffff;
@@ -52,4 +61,97 @@ img {
   left: 0;
   right: 0;
   z-index: 100;
+}
+
+.header-inner {
+  display: flex;
+  align-items: center;
+}
+
+.header-logo {
+  width: 120px;
+}
+
+.header-nav {
+  margin-left: auto;
+}
+
+.header-nav-list {
+  display: flex;
+}
+
+.header-nav-item {
+  & + & {
+    margin-left: 46px;
+  }
+}
+
+.header-nav-item-link {
+  // リンクはblock要素で高さ、幅の指定ができるようにする。
+  display: block;
+  color: $font-color;
+  height: 70px;
+  line-height: 70px;
+  letter-spacing: 0.1em;
+}
+
+main {
+  margin-top: 70px;
+}
+
+
+// ------- footer ---------------*/
+footer {
+  background: #f7f7f7;
+  padding: 42px 40px 12px;
+}
+
+.footer-logo {
+  width: 120px;
+  margin: 0 auto;
+}
+
+.footer-nav-list {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-nav-item {
+  & + & {
+    margin-left: 30px;
+  }
+}
+
+.footer-nav-item-link {
+  font-size: 12px;
+  color: $font-color;
+  display: block;
+  padding: 1em 0;
+  
+}
+
+.footer-sns-list {
+  text-align: center;
+}
+
+.footer-sns-item {
+  display: inline-block;
+
+  & + & {
+    margin-left: 10px;
+  }
+}
+
+.footer-sns-item-link {
+  color: $primary-color;
+  font-size: 24px;
+  display: block;
+  padding: 0.1em 0.5em;
+}
+
+.footer-copyright {
+  color: #888888;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 10px;
 }
