--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,36 @@ main {
   margin-top: 70px;
 }
 
+.section {
+  margin-top: 160px;
+}
+
+.util-title {
+  font-size: 40px;
+  font-weight: 700;
+  text-align: center;
+  line-height: 1;
+}
+
+.util-title::after {
+  content: "";
+  display: block;
+  height: 1px;
+  width: 60px;
+  background: #3EA1D1;
+  margin: 16px auto;
+}
+
+.util-link {
+  font-size: 14px;
+  letter-spacing: 0.1em;
+  color: #3EA1D1;
+  border: solid 1px #3EA1D1;
+  background: #ffffff;
+  display: inline-block;
+  padding: 10px 54px;
+}
+
 footer {
   background: #f7f7f7;
   padding: 42px 40px 12px;
