--- a/css/style.scss
+++ b/css/style.scss
@@ -216,3 +216,34 @@ footer {
 .top-message-text {
   margin-top: 18px;
 }
+
+// ---------- concept -----------*/
+
+.concept-inner {
+  margin-top: 64px;
+  display: flex;
+  // 中央寄せ
+  align-items: center;
+}
+
+.concept-picture {
+  // flexで横はば指定することができる
+  flex: 0 0 50%;
+}
+
+.concept-message {
+  flex: 0 1 50%;
+  margin-left: 6.6667%;
+}
+
+.concept-message-title {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.concept-message-text {
+  font-weight: 300;
+  margin-top: 48px;
+}
+
+// ---------- feature -----------*/
