--- a/css/style.scss
+++ b/css/style.scss
@@ -247,3 +247,44 @@ footer {
 }
 
 // ---------- feature -----------*/
+.feature {
+
+}
+
+.feature-list {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 64px;
+
+}
+
+.feature-item {
+  flex: 0 0 28.3333%;
+}
+
+.feature-item-link {
+  display: block;
+  color: $font-color;
+  background: #ffffff;
+  // カラーコードを見るためにrgbaに合わせて色を見る
+  box-shadow: 3px 3px 15px rgba(96, 96, 96, 0.16);
+}
+
+.feature-item-picture {
+  img {
+
+  }
+}
+
+.feature-item-body {
+  text-align: center;
+  font-weight: 600;
+  padding: 26px 12px;
+}
+
+.feature-item-title {
+
+}
+
+// ---------- about -----------*/
+
