--- a/css/style.css
+++ b/css/style.css
@@ -254,4 +254,36 @@ footer {
   font-weight: 600;
   padding: 26px 12px;
 }
+
+.about {
+  background: url(../img/hugebg.png) center center/cover;
+  color: #ffffff;
+  position: relative;
+  padding: 120px 0;
+}
+
+.about::before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.12);
+}
+
+.about-inner {
+  position: relative;
+}
+
+.about-title {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.about-text {
+  font-weight: 600;
+  margin-top: 40px;
+}
 /*# sourceMappingURL=style.css.map */
