--- a/css/style.scss
+++ b/css/style.scss
@@ -288,3 +288,35 @@ footer {
 
 // ---------- about -----------*/
 
+.about {
+  background: url(../img/hugebg.png) center center / cover;
+  // 画像が明るすぎるので疑似要素を使って暗いカバーを用意する
+  color: #ffffff;
+  position: relative;
+  padding: 120px 0;
+  &::before {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.12);
+  }
+}
+
+.about-inner {
+  // positionを使用したら要素が浮く
+  position: relative;
+}
+
+.about-title {
+  font-size: 22px;
+  font-weight: 600;
+}
+
+.about-text {
+  font-weight: 600;
+  margin-top: 40px;
+}
