--- a/css/style.css
+++ b/css/style.css
@@ -326,4 +326,58 @@ footer {
   text-align: center;
   margin-top: 44px;
 }
+
+.news {
+  max-width: 1040px;
+}
+
+.news-list {
+  margin-top: 28px;
+}
+
+.news-item {
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.news-item-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #333;
+  font-size: 14px;
+  padding: 22px 0;
+}
+
+.news-item-header {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 260px;
+          flex: 0 0 260px;
+}
+
+.news-item-body {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 100%;
+          flex: 0 1 100%;
+  margin-left: 40px;
+}
+
+.news-item-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 4px;
+}
+
+.news-item-text {
+  color: #888888;
+  margin-top: 16px;
+  line-height: 1.7143;
+}
+
+.news-footer {
+  text-align: center;
+  margin-top: 48px;
+}
 /*# sourceMappingURL=style.css.map */
