--- a/css/style.scss
+++ b/css/style.scss
@@ -356,3 +356,51 @@ footer {
   text-align: center;
   margin-top: 44px;
 }
+
+// ---------- products -----------*/
+
+.news {
+  max-width: 1040px;
+}
+
+.news-list {
+  margin-top: 28px;
+}
+
+.news-item {
+  border-bottom: 1px solid #e0e0e0;
+}
+
+.news-item-link {
+  display: flex;
+  align-items: center;
+  color: $font-color;
+  font-size: 14px;
+  padding: 22px 0;
+}
+
+.news-item-header {
+  flex: 0 0 260px;
+}
+
+.news-item-body {
+  flex: 0 1 100%;
+  margin-left: 40px;
+}
+
+.news-item-title {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 4px;
+}
+
+.news-item-text {
+  color: #888888;
+  margin-top: 16px;
+  line-height: 1.7143;
+}
+
+.news-footer {
+  text-align: center;
+  margin-top: 48px;
+}
