--- a/css/style.css
+++ b/css/style.css
@@ -446,15 +446,29 @@ footer {
 @media screen and (max-width: 767px) {
   .about-text {
     font-size: 14px;
+    margin-top: 22px;
   }
 }
 
 .products {
-  max-width: 990px;
+  max-width: 940px;
+}
+
+@media screen and (max-width: 767px) {
+  .products {
+    max-width: 340px;
+    padding: 0 58px;
+  }
 }
 
 .products-list {
   margin-top: 64px;
+}
+
+@media screen and (max-width: 767px) {
+  .products-list {
+    margin-top: 48px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -465,6 +479,12 @@ footer {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .products-item + .products-item {
+    margin-top: 40px;
   }
 }
 
@@ -496,12 +516,30 @@ footer {
   margin-top: 44px;
 }
 
+@media screen and (max-width: 767px) {
+  .products-footer {
+    margin-top: 42px;
+  }
+}
+
 .news {
   max-width: 1040px;
 }
 
+@media screen and (max-width: 767px) {
+  .news {
+    padding: 0 32px;
+  }
+}
+
 .news-list {
   margin-top: 28px;
+}
+
+@media screen and (max-width: 767px) {
+  .news-list {
+    margin-top: 25px;
+  }
 }
 
 .news-item {
@@ -512,6 +550,7 @@ footer {
   color: #333;
   font-size: 14px;
   padding: 22px 0;
+  display: block;
 }
 
 @media screen and (min-width: 768px) {
