送信の処理を実装

--- a/css/style.css
+++ b/css/style.css
@@ -1079,4 +1079,14 @@ footer {
     margin-top: 24px;
   }
 }
+
+.contact-message {
+  text-align: center;
+  margin-top: 60px;
+  display: none;
+}
+
+.contact-message.-error {
+  color: #f00;
+}
 /*# sourceMappingURL=style.css.map */
